ops: fix right sidebar

--- a/index.html
+++ b/index.html
@@ -316,27 +316,7 @@
             </div>
             <div class="right-sidebar">
                 <div class="nav-social-media-block">
-                    <a data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b711" href="https://x.com/" target="_blank"
-                        class="nav-social-media-link w-inline-block">
-                        <div class="social-media-wrap"><img loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a565cdd922093c81f865_x-twitter-icon.svg"
-                                alt="Twitter - X – Outflow Webflow Template" class="social-media-icon" /><img
-                                loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a565cdd922093c81f865_x-twitter-icon.svg"
-                                alt="Twitter - X – Outflow Webflow Template" class="social-media-icon" /></div>
-                        <div class="social-media-bg"></div>
-                    </a>
-                    <a data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b716" href="https://www.instagram.com/"
-                        target="_blank" class="nav-social-media-link w-inline-block">
-                        <div class="social-media-wrap"><img loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a55cca49535d8b0a2cd8_instagram-icon.svg"
-                                alt="Instagram – Outflow Webflow Template" class="social-media-icon" /><img
-                                loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a55cca49535d8b0a2cd8_instagram-icon.svg"
-                                alt="Instagram – Outflow Webflow Template" class="social-media-icon" /></div>
-                        <div class="social-media-bg"></div>
-                    </a>
-                    <a data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b71b" href="https://www.linkedin.com/" target="_blank"
+                    <a data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b71b" href="https://www.linkedin.com/company/outflow-top/" target="_blank"
                         class="nav-social-media-link w-inline-block">
                         <div class="social-media-wrap"><img loading="lazy"
                                 src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a559f144c2b3b8a9c08a_linkedin-icon.svg"
@@ -344,16 +324,6 @@
                                 loading="lazy"
                                 src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a559f144c2b3b8a9c08a_linkedin-icon.svg"
                                 alt="LinkedIn – Outflow Webflow Template" class="social-media-icon" /></div>
-                        <div class="social-media-bg"></div>
-                    </a>
-                    <a data-w-id="c455ec48-5724-5b5d-03f2-2f117cc3b720" href="https://www.facebook.com/" target="_blank"
-                        class="nav-social-media-link w-inline-block">
-                        <div class="social-media-wrap"><img loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a555f48f463eaa5ce309_facebook-icon.svg"
-                                alt="Facebook – Outflow Webflow Template" class="social-media-icon" /><img
-                                loading="lazy"
-                                src="https://cdn.prod.website-files.com/66c0a179750ab0d1e7b5dc1b/66c0a555f48f463eaa5ce309_facebook-icon.svg"
-                                alt="Facebook – Outflow Webflow Template" class="social-media-icon" /></div>
                         <div class="social-media-bg"></div>
                     </a>
                 </div>
